[package]
name = "wgpu-async"
version = "24.0.3"
edition = "2021"
license = "MIT"
description = "Converts some WGPU callback methods to async methods."
homepage = "https://github.com/LucentFlux/wgpu-async"
repository = "https://github.com/LucentFlux/wgpu-async"
readme = "README.md"
keywords = ["async", "wasm", "wgpu", "utility"]
categories = ["asynchronous", "rendering"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
wgpu = "24.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
